deploy: f7686d420fec38cbd3e7680bcf890e434d94e6f7

--- a/index.html
+++ b/index.html
@@ -5,55 +5,55 @@
       <div class="block"><span>Total tests</span><div class="total-tests">9</div><br></div>
       <div class="block"><span>Passed  : </span><span class="passedTests">9</span><br><span>Failed  : </span><span class="failedTests">0</span><br><span>Skipped : </span><span class="skippedTests">0</span><br></div>
       <div class="block"><span>Pass percentage</span><div class="pass-percentage">100 %</div><br></div>
-      <div class="block"><span>Run duration</span><div class="test-run-time">7s 413ms</div><br></div><br></div>
-    <h2>All Results</h2><details><summary>/home/runner/work/dotnet-restsharp-test-api-go-rest/dotnet-restsharp-test-api-go-rest/bin/Debug/net9.0/api-dotnet-restsharp.dll</summary><div class="inner-row" Id="-1086170413">
+      <div class="block"><span>Run duration</span><div class="test-run-time">7s 684ms</div><br></div><br></div>
+    <h2>All Results</h2><details><summary>/home/runner/work/dotnet-restsharp-test-api-go-rest/dotnet-restsharp-test-api-go-rest/bin/Debug/net9.0/api-dotnet-restsharp.dll</summary><div class="inner-row" Id="2026054251">
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT03] Buscar usuário por status​</span><div class="duration"><span>925ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT03] Buscar usuário por status​</span><div class="duration"><span>914ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT09] Excluir usuário​</span><div class="duration"><span>1s 169ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT09] Excluir usuário​</span><div class="duration"><span>1s 84ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT06] Buscar todos os TO DOs​</span><div class="duration"><span>776ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT06] Buscar todos os TO DOs​</span><div class="duration"><span>736ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT01] Buscar todos os usuários​</span><div class="duration"><span>765ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT01] Buscar todos os usuários​</span><div class="duration"><span>751ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT07] Criar usuário​</span><div class="duration"><span>815ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT07] Criar usuário​</span><div class="duration"><span>806ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT04] Buscar todos os comentários​</span><div class="duration"><span>756ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT04] Buscar todos os comentários​</span><div class="duration"><span>299ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT05] Buscar todos os posts​</span><div class="duration"><span>745ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT05] Buscar todos os posts​</span><div class="duration"><span>729ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT08] Alterar usuário​</span><div class="duration"><span>656ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT08] Alterar usuário​</span><div class="duration"><span>1s 112ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
         <div class="leaf-division">
-          <div><span class="pass">✔</span><span> [CT02] Buscar usuário por gênero​</span><div class="duration"><span>300ms</span><br></div>
+          <div><span class="pass">✔</span><span> [CT02] Buscar usuário por gênero​</span><div class="duration"><span>735ms</span><br></div>
           </div>
           <div class="error-info"></div>
         </div>
       </div></details><div>
-      <h2>Informational messages</h2><span>[xUnit.net 00:00:00.00] xUnit.net VSTest Adapter v2.8.2+699d445a1a (64-bit .NET 9.0.4)</span><br><span>[xUnit.net 00:00:00.06]   Discovering: api-dotnet-restsharp</span><br><span>[xUnit.net 00:00:00.09]   Discovered:  api-dotnet-restsharp</span><br><span>[xUnit.net 00:00:00.09]   Starting:    api-dotnet-restsharp</span><br><span>     Warning:</span><br><span>     The component "Fluent Assertions" is governed by the rules defined in the Xceed License Agreement and</span><br><span>     the Xceed Fluent Assertions Community License. You may use Fluent Assertions free of charge for</span><br><span>     non-commercial use only. An active subscription is required to use Fluent Assertions for commercial use.</span><br><span>     Please contact Xceed Sales mailto:sales@xceed.com to acquire a subscription at a very low cost.</span><br><span>     A paid commercial license supports the development and continued increasing support of</span><br><span>     Fluent Assertions users under both commercial and community licenses. Help us</span><br><span>     keep Fluent Assertions at the forefront of unit testing.</span><br><span>     For more information, visit https://xceed.com/products/unit-testing/fluent-assertions/</span><br><span>[xUnit.net 00:00:07.05]   Finished:    api-dotnet-restsharp</span><br></div>
+      <h2>Informational messages</h2><span>[xUnit.net 00:00:00.00] xUnit.net VSTest Adapter v2.8.2+699d445a1a (64-bit .NET 9.0.4)</span><br><span>[xUnit.net 00:00:00.06]   Discovering: api-dotnet-restsharp</span><br><span>[xUnit.net 00:00:00.09]   Discovered:  api-dotnet-restsharp</span><br><span>[xUnit.net 00:00:00.09]   Starting:    api-dotnet-restsharp</span><br><span>     Warning:</span><br><span>     The component "Fluent Assertions" is governed by the rules defined in the Xceed License Agreement and</span><br><span>     the Xceed Fluent Assertions Community License. You may use Fluent Assertions free of charge for</span><br><span>     non-commercial use only. An active subscription is required to use Fluent Assertions for commercial use.</span><br><span>     Please contact Xceed Sales mailto:sales@xceed.com to acquire a subscription at a very low cost.</span><br><span>     A paid commercial license supports the development and continued increasing support of</span><br><span>     Fluent Assertions users under both commercial and community licenses. Help us</span><br><span>     keep Fluent Assertions at the forefront of unit testing.</span><br><span>     For more information, visit https://xceed.com/products/unit-testing/fluent-assertions/</span><br><span>[xUnit.net 00:00:07.31]   Finished:    api-dotnet-restsharp</span><br></div>
   </body>
   <style>
         body { font-family: Calibri, Verdana, Arial, sans-serif; background-color: White; color: Black; }
